feat(iam): add enterprise policy management system with conflict detection, versioning, simulation, and AI validation